--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow-estimator==2.11.0
-tensorflow-macos==2.11.0
+tensorflow==2.11.0
 termcolor==2.2.0
 tomli==2.0.1
 typing_extensions==4.5.0
