--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ h5py==3.8.0
 idna==3.4
 importlib-metadata==6.0.0
 importlib-resources==5.12.0
+Jinja2==3.1.2
 keras==2.11.0
 kiwisolver==1.4.4
 libclang==15.0.6.1
